--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
-        "encore/laravel-admin": "dev-master"
+        "encore/laravel-admin": "1.4.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
